# quantification

./: .dockerignore  Dockerfile  README.md  pixi.toml  pyimagej_rolling_ball.py  pyproject.toml  test_e2e.py
chunkprop/: __init__.py  _chunks.py  _io.py  _props.py  _quantify.py  cli.py  pipeline.py
mcquant/: __init__.py  _chunks.py  _io.py  _props.py  _quantify.py  cli.py  pipeline.py
src/chunkprop/: __init__.py  _quantify.py  cli.py
tests/: test_e2e.py
