[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chunkprop"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.11",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-image>=0.24",
    "tifffile>=2024.9",
    "zarr>=3.0",
    "tqdm>=4.66",
    "imagecodecs>=2024.9",
]

[project.scripts]
chunkprop = "chunkprop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "2026.4.1"

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
